--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,9 @@ tower-http = { version = "0.6.6", features = ["trace", "cors"] }
 config = "0.15.19"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+thiserror = "2.0.17"
+adbc_core = "0.21"
+adbc_driver_manager = "0.21"
 
 [dev-dependencies]
 testcontainers = "0.23"
