--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/bin/server.rs"
 [dependencies]
 datafusion = "50.2"
 duckdb = { version = "1.4", features = ["bundled"] }
+sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
 rustyline = "17.0"
 tokio = { version = "1.47", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
@@ -29,10 +30,6 @@ clap = { version = "4.5", features = ["derive"] }
 arrow-csv = "56.2"
 arrow-json = "56.2"
 arrow-schema = { version = "56.2", features = ["serde"] }
-tokio-postgres = "0.7"
-postgres-native-tls = "0.5"
-native-tls = "0.2"
-deadpool-postgres = "0.14"
 object_store = { version = "0.12", features = ["aws"] }
 url = "2.5"
 axum = "0.8.7"
@@ -42,8 +39,6 @@ config = "0.15.19"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 thiserror = "2.0.17"
-adbc_core = "0.21"
-adbc_driver_manager = "0.21"
 
 [dev-dependencies]
 testcontainers = "0.23"
