--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 thiserror = "2.0.17"
 uuid = { version = "1.11", features = ["v4"] }
+urlencoding = "2.1"
 
 [dev-dependencies]
 testcontainers = "0.23"
