Add initial support for fetching data from remote databases (postgres, motherduck, duckdb) (#2)
* chore: add adbc dependencies

* feat(datafetch): add DataFetchError enum

* feat(datafetch): add TableMetadata and ColumnMetadata types

* feat(datafetch): add DataFetcher trait

* feat(datafetch): add DriverManager for ADBC driver loading

* feat(datafetch): add AdbcFetcher with discovery skeleton

* feat(datafetch): implement get_objects result parsing

* feat(datafetch): implement fetch_table with parquet writing

* feat(catalog): add arrow_schema_json to TableInfo

* feat: integrate DataFetcher with SchemaProvider

* feat(engine): implement connect() with ADBC discovery

* test: add datafetch integration tests

* chore: add driver vendoring directory structure

* fix: implement build.rs for driver vendoring

* fix: use proper Arrow schema serialization

* feat: implement LazyTableProvider for on-demand fetch

* fix: quote SQL identifiers to prevent injection

* fix: allow syncing empty tables

* fix: improve sql_type_to_arrow with NULL handling and warnings

* docs: add documentation to datafetch public APIs

* chore: replace ADBC deps with sqlx

* refactor(datafetch): remove ADBC, add NativeFetcher skeleton

* feat(datafetch): add StreamingParquetWriter

* refactor(catalog): migrate postgres_manager to sqlx

* feat(datafetch): add DuckDB discovery

* feat(datafetch): add DuckDB fetch_table

* feat(datafetch): add PostgreSQL discovery

* feat(datafetch): add PostgreSQL fetch with Arrow conversion

* refactor(catalog): merge add_table and update_table_schema

* test: update tests for native datafetch

* refactor(datafetch): centralize streaming Parquet writer

* test: add comprehensive tests for streaming parquet writer

* log errors

* build connection string from input

* automatically handle ssl for postgres

* simplify to use Source instead of raw json

* fix projection push down

* add support for filters/limits at table scan

* add access to catalog

* use corr

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/bin/server.rs"
 [dependencies]
 datafusion = "50.2"
 duckdb = { version = "1.4", features = ["bundled"] }
+sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "tls-rustls"] }
 rustyline = "17.0"
 tokio = { version = "1.47", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
@@ -28,10 +29,7 @@ env_logger = "0.11"
 clap = { version = "4.5", features = ["derive"] }
 arrow-csv = "56.2"
 arrow-json = "56.2"
-tokio-postgres = "0.7"
-postgres-native-tls = "0.5"
-native-tls = "0.2"
-deadpool-postgres = "0.14"
+arrow-schema = { version = "56.2", features = ["serde"] }
 object_store = { version = "0.12", features = ["aws"] }
 url = "2.5"
 axum = "0.8.7"
@@ -40,6 +38,9 @@ tower-http = { version = "0.6.6", features = ["trace", "cors"] }
 config = "0.15.19"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+thiserror = "2.0.17"
+uuid = { version = "1.11", features = ["v4"] }
+urlencoding = "2.1"
 
 [dev-dependencies]
 testcontainers = "0.23"
