--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,6 +102,7 @@ jobs:
   build:
     name: Build (${{ matrix.arch }})
     needs: [test]
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' # only build on main (for now)
     strategy:
       matrix:
         include:
@@ -147,7 +148,6 @@ jobs:
     name: Create multi-arch manifest
     runs-on: ubuntu-latest
     needs: [build]
-#    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     permissions:
       contents: read
       packages: write
