--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,10 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 thiserror = "2.0.17"
 uuid = { version = "1.11", features = ["v4"] }
 urlencoding = "2.1"
+aes-gcm-siv = "0.11"
+base64 = "0.22"
+once_cell = "1.21"
+regex = "1.11"
 
 [dev-dependencies]
 testcontainers = "0.23"
