--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,3 +44,4 @@ base64 = "0.22"
 testcontainers = "0.23"
 testcontainers-modules = { version = "0.11", features = ["postgres"] }
 proptest = "1.6"
+rand = "0.8"
