--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,9 +38,13 @@ base64 = "0.22"
 iceberg = "0.7"
 iceberg-catalog-rest = "0.7"
 iceberg-catalog-glue = "0.7"
+snowflake-api = "0.11"
 # Arrow 55 for iceberg compatibility (iceberg uses arrow 55, datafusion uses arrow 56)
 arrow-array-55 = { package = "arrow-array", version = "55" }
 arrow-ipc-55 = { package = "arrow-ipc", version = "55" }
+# Arrow 54 for snowflake-api compatibility (snowflake-api uses arrow 54)
+arrow-array-54 = { package = "arrow-array", version = "54" }
+arrow-ipc-54 = { package = "arrow-ipc", version = "54" }
 
 [dev-dependencies]
 testcontainers = "0.26.3"
