--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ datafusion = "50.2"
 duckdb = { version = "1.4", features = ["bundled"] }
 sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "mysql", "chrono", "tls-rustls"] }
 tokio = { version = "1.47", features = ["full"] }
+tokio-util = "0.7"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 anyhow = "1.0"
